force-app/main/default/objects/Relationship_Graph_Config__mdt/Relationship_Graph_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for the Relationship Graph solution including AI provider selection and thresholds.</description>
    <label>Relationship Graph Config</label>
    <pluralLabel>Relationship Graph Configs</pluralLabel>
</CustomObject>