force-app/main/default/objects/Relationship_Graph_Config__mdt/fields/Activity_Threshold_Days__c.field-meta.xml
<CustomField>
    <fullName>Activity_Threshold_Days__c</fullName>
    <description>Default number of days to look back for contact activity. Contacts with no activity in this period are considered passive.</description>
    <defaultValue>90</defaultValue>
    <label>Activity Threshold (Days)</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>