force-app/main/default/objects/Relationship_Graph_Config__mdt/fields/Cache_TTL_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Cache_TTL_Minutes__c</fullName>
    <description>Time-to-live in minutes for cached graph data in Platform Cache.</description>
    <defaultValue>60</defaultValue>
    <label>Cache TTL (Minutes)</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>