force-app/main/default/objects/Relationship_Graph_Config__mdt/fields/Classification_Provider__c.field-meta.xml
<CustomField>
    <fullName>Classification_Provider__c</fullName>
    <description>The active AI provider for contact classification. Value must match a registered IClassificationProvider implementation.</description>
    <label>Classification Provider</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>