force-app/main/default/objects/Relationship_Graph_Config__mdt/fields/Contact_Moved_Flag_Field__c.field-meta.xml
<CustomField>
    <fullName>Contact_Moved_Flag_Field__c</fullName>
    <description>API name of the boolean field on Contact that indicates the person has left the company. Leave blank to disable moved-contact detection.</description>
    <label>Contact Moved Flag Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>