force-app/main/default/objects/Relationship_Graph_Config__mdt/fields/Contact_Moved_Info_Field__c.field-meta.xml
<CustomField>
    <fullName>Contact_Moved_Info_Field__c</fullName>
    <description>API name of an additional text field on Contact with move-related information (e.g. reason, notes).</description>
    <label>Contact Moved Info Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>