force-app/main/default/objects/Relationship_Graph_Config__mdt/fields/Contact_Previous_Company_Field__c.field-meta.xml
<CustomField>
    <fullName>Contact_Previous_Company_Field__c</fullName>
    <description>API name of the text field on Contact that stores the previous company name when the person has moved.</description>
    <label>Contact Previous Company Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>