force-app/main/default/objects/Relationship_Graph_Config__mdt/fields/Hierarchy_Contact_Limit__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Contact_Limit__c</fullName>
    <description>Maximum number of contacts to display per hierarchy account (parent/child). Limits node count for performance.</description>
    <defaultValue>10</defaultValue>
    <label>Hierarchy Contact Limit</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>