force-app/main/default/objects/Relationship_Graph_Config__mdt/fields/Min_Interactions__c.field-meta.xml
<CustomField>
    <fullName>Min_Interactions__c</fullName>
    <description>Minimum number of interactions required for a contact to be considered active (non-passive).</description>
    <defaultValue>3</defaultValue>
    <label>Min Interactions</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>