force-app/main/default/objects/Relationship_Graph_Config__mdt/fields/Parent_Account_Field__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Field__c</fullName>
    <description>API name of the field on Account that references the parent account. Defaults to the standard ParentId field.</description>
    <label>Parent Account Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>