force-app/main/default/objects/Relationship_Graph_Config__mdt/fields/Show_Account_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Show_Account_Hierarchy__c</fullName>
    <description>When true, the graph can display parent and child accounts from the account hierarchy.</description>
    <defaultValue>false</defaultValue>
    <label>Show Account Hierarchy</label>
    <type>Checkbox</type>
</CustomField>