force-app/main/default/objects/Relationship_Graph_Config__mdt/fields/Time_Decay_Factor__c.field-meta.xml
<CustomField>
    <fullName>Time_Decay_Factor__c</fullName>
    <description>Weekly decay factor for relationship strength calculation (0.0 to 1.0). Default 0.95 means 5% decay per week.</description>
    <defaultValue>0.95</defaultValue>
    <label>Time Decay Factor</label>
    <precision>4</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Number</type>
</CustomField>