force-app/main/default/objects/Relationship_Graph_Config__mdt/fields/Ultimate_Parent_Field__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent_Field__c</fullName>
    <description>Optional API name of a text field on Account storing the ultimate parent name. Leave blank if not used.</description>
    <label>Ultimate Parent Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>